--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "electron-react-boilerplate",
-  "version": "2.3.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
-  "main": "./main.prod.js",
+  "name": "mm-dashboard",
+  "productName": "MM-Dashboard",
+  "version": "0.1.0",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "FEDIRKO.PRO",
+    "email": "sergey.fedirko@gmail.com",
+    "url": "https://fedirko.pro"
   },
+  "description": "Interface for motorcycle screen.",
+  "main": "./main.prod.js",
   "scripts": {
     "electron-rebuild": "node -r ../.erb/scripts/BabelRegister.js ../.erb/scripts/ElectronRebuild.js",
     "postinstall": "yarn electron-rebuild"
